Issue #SB-31143 fix: dark mode - Discussion forum headings

--- a/src/app.scss
+++ b/src/app.scss
@@ -830,6 +830,9 @@ html[data-theme="JOYFUL"][data-mode="DARKMODE"] {
         width: 100%;
         color: white !important;
       }
+      .discussion-start-modal .discussion-start-modal-content .discussion-start-form .start-form-content .start-form-label {
+        color: white !important;
+      }
     }
   }
 }
